<resources>
    <string name="app_name">BalinaTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="passwords_do_not_match">The passwords do not match</string>
    <string name="error">Error</string>
    <string name="should_not_be_empty">Should not be empty</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="error_checking_location_settings">Error checking location settings</string>
    <string name="location_not_included">Location not included</string>
    <string name="failed_to_capture_photo">Failed to capture photo</string>
    <string name="error_sending_image">Error sending image</string>
    <string name="image_sent_successfully">Image sent successfully</string>
    <string name="unable_to_create_image_uri">Unable to create image Uri</string>
    <string name="image_deleted_successfully">Image deleted successfully</string>
    <string name="failed_to_delete_image">Failed to delete image</string>
    <string name="comment_was_added">Comment was added</string>
    <string name="image_not_found">Image not found</string>
    <string name="comment_was_deleted">Comment was deleted</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="are_you_sure_you_want_delete_this_comment">Are you sure you want to delete this comment?</string>
    <string name="are_you_sure_you_want_delete_this_image">Are you sure you want to delete this image?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="image_id_title">Image ID: %1$s</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_map">Map</string>
    <string name="menu_auth">Auth</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="floating_button_to_make_photo">floating button to make photo</string>
    <string name="logout">Logout</string>
    <string name="enter_message">Enter message</string>
</resources>