<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_auth">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sparkfusion.balina.test.ui.screen.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sparkfusion.balina.test.ui.screen.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">

        <action
            android:id="@+id/action_galleryFragment_to_imageInfoFragment"
            app:destination="@id/nav_info" />

    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.sparkfusion.balina.test.ui.screen.map.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_auth"
        android:name="com.sparkfusion.balina.test.ui.screen.auth.AuthFragment"
        android:label="@string/menu_auth" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.sparkfusion.balina.test.ui.screen.info.ImageInfoFragment"
        android:label="ImageInfoFragment">

        <argument
            android:name="imageModel"
            app:argType="com.sparkfusion.balina.test.domain.model.image.GetImageModel" />

    </fragment>
</navigation>